# lilbro

./: .env.sample  .gitignore  README.md  docker-compose.yml  pytest.ini
backend/: requirements.txt
docker/: api.Dockerfile  web.Dockerfile
volley-sense/: README.md  docker-compose.yml  install.ps1  install.sh
volley-sense/apps/api/: modules.json  pyproject.toml  setup.cfg
volley-sense/apps/api/app/: main.py  modules.json
volley-sense/apps/api/app/models/: schemas.py
volley-sense/apps/api/app/modules/: loader.py  manager.py
volley-sense/apps/api/app/modules/core_video/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/event_trainer/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/exports/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/llm_insights/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/overlays/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/screensnap/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/stats/: module.manifest.json  router.py
volley-sense/apps/api/app/modules/timeline/: module.manifest.json  router.py
volley-sense/apps/api/app/routers/: analyze.py  events.py  explain.py  exports.py  insights.py  modules.py  overlays.py  screensnap.py  stats.py  trainer.py  video.py
volley-sense/apps/api/app/services/: mock_data.py
volley-sense/apps/api/tests/: test_events.py
web/: .env.sample  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
(+90 files in other folders)
