[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volley-sense-api"
version = "0.1.0"
description = "Mock backend for VolleySense demo"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.104",
  "uvicorn[standard]>=0.23",
  "pydantic<2.0",
  "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
